--- a/bw/Solo-Project.qmd
+++ b/bw/Solo-Project.qmd
@@ -1,8 +1,17 @@
 ---
 title: "Solo Project"
-format: html
+
+execute: 
+  echo: true
+  warning: false
+  error: false
+  
+format:
+  html:
+    code-fold: true
 ---
 
+## Set-Up {.unnumbered}
 
 ```{r}
 # load packages and data
@@ -20,7 +29,7 @@ zcta_sf <- zctas(cb = FALSE)
 
   
 
-# Data Wrangling {.unnumbered}
+## Data Wrangling {.unnumbered}
 
 ```{r}
 # clean Elevators data
@@ -49,10 +58,18 @@ elevators3 <- elevators2 |>
 ```
 
 
-# Spatial Viz {.unnumbered}
+## Spatial Viz {.unnumbered}
 
 ```{r, fig.width=9, fig.height=7}
 #| fig.alt: "Choropleth map showing the number of active passenger elevators in each New York City zip code."
+
+# code for labels
+boroughs <- data_frame(
+  borough = c("Manhattan", "Brooklyn", "Queens", "Bronx", "Staten Island"),
+  lon = c(-73.97, -73.95, -73.85, -73.88, -74.15),
+  lat = c(40.78, 40.65, 40.70, 40.85, 40.58)
+)
+
 # make the map
 
 elevators3 |>
@@ -60,11 +77,17 @@ elevators3 |>
   geom_sf(aes(geometry = geometry, fill = n),
           color = "black",
           linewidth = 0.01)+
+  geom_label(data = boroughs, aes(x=lon, y = lat, label = borough),
+            color = "black", fontface = "bold", size = 4, vjust = -0.5)+
   theme_dark()+
-  scale_fill_gradientn(name = "Number of \nElevators", colors = c("white","#d1e3a8","darkolivegreen2","darkgreen","#0c360a"), values = scales::rescale(seq(0,5, by = 0.1)))+
+  scale_fill_gradientn(
+    name = "Number of \nElevators", 
+    colors = c("white","#d1e3a8","darkolivegreen2","darkgreen","#0c360a"), 
+    values = scales::rescale(seq(0,5, by = 0.1)))+
   labs(title = "Passenger Elevators in NYC by Zip Code",
        subtitle = "Active Elevators only",
-       caption = "Elevator Data from Tidy Tuesday (week of 12/06/2022) || Map Data from US Census Bureau TIGER/Line Shapefiles")+
+       caption = "Created by Sarah in 2025 
+       Elevator Data from Tidy Tuesday (week of 12/06/2022) and Map Data from US Census Bureau TIGER/Line Shapefiles")+
   theme(
     plot.title = element_text(color="green4", face = "bold", size = 25, hjust = 0.5),
     plot.subtitle = element_text(hjust = 0.5, size = 13, face = "italic"),
@@ -72,9 +95,25 @@ elevators3 |>
     plot.background = element_blank(),
     panel.grid.major = element_blank(),
     panel.grid.minor = element_blank(),
-    panel.border = element_blank())
+    panel.border = element_blank(),
+    axis.title.x = element_blank(),
+    axis.text.x = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.title.y = element_blank(),
+    axis.text.y = element_blank(),
+    axis.ticks.y = element_blank())
 
 
 ```
+
+## Story{.unnumbered}
+
+From the map, the greatest amount of active passenger elevators are in Manhattan, specifically Midtown Manhattan. In this part of Manhattan, there are multiple zip codes with over 1000 elevators. Midtown Manhattan has a dense concentration of high-rise office towers, apartment buildings, and hotels that make up the iconic New York skyline. So it makes sense that there is a significantly greater amount of elevators in that area compared to the rest of Manhattan and other boroughs of New York city.
+
+Zip codes in other boroughs have significantly fewer elevators. Staten Island is mainly composed of single-family homes and parks, compared to the skyscrapers in Manhattan, so its zip codes have a relatively low amount of elevators -- most appear to be under 500 elevators. Brooklyn, Queens, and the Bronx have a moderate number of elevators per zip code (between 500 and 1000), with some areas having more elevators than others. These boroughs are also composed of houses and apartment buildings, but have some high-rise buildings that contribute to a medium number of elevators. For instance, the Bronx is home to Co-op city, a dense housing development with tall buildings. Downtown areas of these boroughs also contain more high-rise buildings. These outliers lead to some zip codes having more elevators than others.
+
+From the map, one might be able to infer where the majority of tall buildings in New York City are, as areas with more elevators are located where most of the high-rise buildings in the city are. Additionally, the map points out how the number of elevators can vary within a borough by zip code, indicating that not all zip codes have the same types of buildings or density. But other buildings, such as hospitals, transportation centers (ie train station, airport, etc), and colleges/universities could drive up the elevator count for an area that does not particularly have a lot of skyscrapers. An interesting follow-up would be looking at the number of floors each elevator traverses to find where the high-rise buildings are.
+
+
 
 
