--- a/bw/bw-quad.qmd
+++ b/bw/bw-quad.qmd
@@ -2,9 +2,13 @@
 title: "Quadvariate Viz"
 
 execute: 
-  echo: false
+  echo: true
   warning: false
   error: false
+  
+format:
+  html:
+    code-fold: true
 
 ---
 
