--- a/bw/bw-bi.qmd
+++ b/bw/bw-bi.qmd
@@ -14,28 +14,37 @@ format:
 
 
 ```{r}
-#| fig-alt: 3 box plots comparing temperatures (in Celsius) of three different locations in Australia 
+#| fig-alt: Line graph comparing the average monthly minimum and maximum temperatures in Hobart, Australia in 2020.
 
 # set-up (load packages, import data)
 library(tidyverse)
+library(RColorBrewer)
 weather <- read.csv("https://mac-stat.github.io/data/weather_3_locations.csv")
 
 # create plot
 # How do 3pm temperatures (temp3pm) differ by location?
-ggplot(weather, aes(y=temp3pm, fill=location))+
-  geom_boxplot(width=0.7)+
-  facet_wrap(~location)+
-  labs(title = "Temperatures at 3pm in Three Australian Locations",
-       y = "Temperature (*C)",
-       fill = "Location",
+weather |>
+  filter(location == "Hobart") |>
+  mutate(year = year(date)) |>
+  filter(year == "2020") |>
+  mutate(month = factor(month(date, label = TRUE), levels = month.abb)) |>
+  group_by(month, location) |>
+  summarize(`low` = mean(mintemp),
+            `high` = mean(maxtemp)) |>
+  pivot_longer(cols = c(`low`, `high`),
+               names_to = "time", values_to = "temp") |>
+  ggplot(aes(x=month, y = temp, color = time, group = time))+
+  geom_line(linewidth = 1)+
+  geom_point()+
+  geom_label(aes(label = round(temp), y = temp+0.8), size = 3)+
+  labs(title = "High and Low Average Monthly Temperatures in Hobart in 2020",
+       y = "Temperature (*C)", x = "Month",
+       color = "Time",
        caption = "created by Sarah in 2025, data from weatherAUS in the rattle package"
        )+
   theme(plot.title = element_text(hjust=0.5, face="bold"),
-        axis.text.x = element_blank(),
-        axis.ticks.x = element_blank(),
         plot.caption = element_text(face="italic"), size = 8)+
-    scale_fill_viridis_d(alpha=0.6)    
-
+  scale_color_brewer(palette = "Dark2")
 
 ```
 
